# floatctf-api

./: .cspell.json  .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  api.md  gen.ps1  run.sh  sources.list
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: sea_model2ts.py
src/: auth.rs  config.rs  db.rs  log.rs  main.rs  prelude.rs
src/api/: error.rs  mod.rs  preclude.rs  prelude.rs  response.rs  sea_orm_utils.rs  util.rs
src/api/admin/: announcements.rs  challenge_sets.rs  challenges.rs  database.rs  discussions.rs  docker.rs  download.rs  dto.rs  event_announcements.rs  event_challenges.rs  event_logs.rs  event_teams.rs  event_users.rs  event_writeups.rs  events.rs  instances.rs  logs.rs  mod.rs  scheduled_tasks.rs  settings.rs  super_admin.rs  system.rs  terminal.rs  users.rs  utils.rs  weapons.rs
src/api/service/: announcements.rs  challenge_sets.rs  challenge_solves.rs  challenge_writeups.rs  challenges.rs  discussions.rs  download.rs  event_calendar.rs  events.rs  instances.rs  mod.rs  submit.rs  super_admin.rs  uploads.rs  users.rs  weapons.rs
src/entity/: announcements.rs  challenge_set_items.rs  challenge_sets.rs  challenge_solves.rs  challenge_writeup.rs  challenges.rs  discussion_comments.rs  discussion_likes.rs  discussions.rs  event_announcements.rs  event_challenge_solves.rs  event_challenges.rs  event_gameboxes.rs  event_instances.rs  event_logs.rs  event_team_members.rs  event_teams.rs  event_users.rs  event_writeup.rs  events.rs  gameboxes.rs  instances.rs  kv_store.rs  logs.rs  mod.rs  prelude.rs  scheduled_tasks.rs  sea_orm_active_enums.rs  settings.rs  super_admin.rs  users.rs  weapons.rs
src/middleware/: auth_s.rs  auth_u.rs  mod.rs
src/scheduler/: engine.rs  mod.rs
src/scheduler/handlers/: mod.rs  pratice_handlers.rs  utils_handlers.rs
src/sql/: down.sql  up.sql  update.sql
src/sql/init/: 01-up.sql  02-index.sql  03-triggers.sql  04-init.sql
src/strategies/event/: common.rs  factory.rs  mod.rs  trait_def.rs
src/strategies/event/implementations/: jeopardy_practice.rs  jeopardy_single.rs  jeopardy_team.rs  mod.rs
