[package]
name = "floatctf"
version = "0.2.4"
edition = "2024"

[dependencies]
fcmc = { path = "./fcmc" }

actix-web = "4"
actix-multipart = "0.7.2"
sea-orm = { version = "1.1.0", features = [
    "macros",
    "with-chrono",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
argon2 = "0.5"
toml = "0.9.5"
base64 = "0.22.1"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
bollard = "0.19.1"
zip = "4.3.0"
tempfile = "3.20.0"
actix-cors = "0.7.1"
# logging
tracing = "0.1" # 核心 tracing
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "chrono",
] }
tracing-appender = "0.2" # 支持日志写入文件
tracing-actix-web = "0.7.19" # Actix Web 的 TracingLogger middleware
pnet = "0.35.0"
sysinfo = "0.37.0"
minijinja = "2.12.0"
async-trait = "0.1.89"
lettre = "0.11.19"
cron = "0.12"

[profile.dev]
opt-level = 0      # 0: 不优化，编译最快（默认）
debug = true
                   # 1: 基础优化，平衡速度
                   # 2: 显著优化
                   # 3: 最高级别优化（类似 Release）
